# mcserver

./: .gitignore  Makefile  Makefile.in  config.h.in  configure.ac
src/: Makefile.am  dynamiclib.cpp  dynamiclib.h  globals.h  mcserver.cpp
